--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ Flask-SQLAlchemy = "2.5.1"
 cryptography = "36.0.1"
 Flask-Login = "0.5.0"
 SQLAlchemy = "1.3.24"
+PyJWT = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 
