--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ cryptography = "36.0.1"
 Flask-Login = "0.5.0"
 SQLAlchemy = "1.4.31"
 PyJWT = "^2.3.0"
+pytest = "^7.1.1"
 
 [tool.poetry.dev-dependencies]
 
